# bachelors-thesis

./: .gitignore  README.md  pyproject.toml  stronatytulowa.odt  styda_thesis.tex
app/: main.py
bibliography/: cite.bib
docs/: ontology.md
presentation/: presentation.tex
worksheet/: Sebastian_Tyda_karta_pracy.docx
