[tool.poetry]
name = "bachelors-thesis"
version = "0.1.0"
description = ""
authors = ["styda"]

[tool.poetry.dependencies]
python = "^3.10"
Owlready2 = "^0.37"
rdflib = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
